--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,9 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="page-header">
-        <h1>La thema esta listo! :D</h1>
-      </div>
-    </div>
-  </div>
-</div>
+<div id="app"></div>
